parser.output
Terminals unused in grammar

    ME
    POINT_X
    POINT_Y
    IMG_DIMS
    IMG_DRAWS
    FUNC
    COLOUR
    RED
    BLUE
    GREEN


State 120 conflicts: 1 shift/reduce
State 148 conflicts: 2 shift/reduce
State 220 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 274 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | translation_unit

    3 translation_unit: external_declaration
    4                 | translation_unit external_declaration

    5 external_declaration: driver_definition
    6                     | function_definition
    7                     | variable_declaration
    8                     | class_declaration

    9 driver_definition: DRIVER '(' ')' compound_statement

   10 type: INT
   11     | FLOAT
   12     | STRING
   13     | BOOL
   14     | VOID
   15     | POINT
   16     | IMAGE
   17     | RECTANGLE
   18     | CIRCLE
   19     | ELLIPSE
   20     | POLYGON
   21     | CURVE
   22     | PATH

   23 literal: INTEGER_LITERAL
   24        | FLOAT_LITERAL
   25        | STRING_LITERAL
   26        | BOOL_LITERAL
   27        | PI

   28 variable_declaration: VAR type variable_list ';'
   29                     | CONST type variable_list ';'

   30 variable_declaration_list: variable_declaration
   31                          | variable_declaration_list variable_declaration

   32 variable_list: variable
   33              | variable_list ',' variable

   34 variable: IDENTIFIER
   35         | variable_initialization

   36 variable_initialization: IDENTIFIER ASSIGN expression

   37 function_definition: type IDENTIFIER '(' args_list ')' compound_statement
   38                    | type IDENTIFIER '(' ')' compound_statement

   39 args_list: arg
   40          | args_list ',' arg

   41 arg: VAR type IDENTIFIER
   42    | CONST type IDENTIFIER

   43 class_declaration: FAMILY IDENTIFIER class_definition ';'
   44                  | FAMILY IDENTIFIER INHERITS IDENTIFIER class_definition ';'
   45                  | FAMILY IDENTIFIER INHERITS access_specifier class_definition ';'

   46 access_specifier: PUBLIC
   47                 | PRIVATE

   48 class_definition: '{' '}'
   49                 | '{' class_members '}'

   50 class_members: class_members access_specifier class_member
   51              | class_members class_member
   52              | access_specifier class_member
   53              | class_member

   54 class_member: variable_declaration
   55             | function_definition
   56             | constructor_declaration

   57 constructor_declaration: IDENTIFIER '(' ')' compound_statement
   58                        | IDENTIFIER '(' args_list ')' compound_statement

   59 object_declaration: VAR IDENTIFIER IDENTIFIER
   60                   | VAR IDENTIFIER IDENTIFIER '(' ')'
   61                   | VAR IDENTIFIER IDENTIFIER '(' expression ')'

   62 primary_expression: IDENTIFIER
   63                   | literal
   64                   | '(' expression ')'

   65 unary_expression: primary_expression
   66                 | unary_expression '[' expression ']'
   67                 | unary_expression '(' ')'
   68                 | unary_expression '(' expression ')'
   69                 | unary_expression SCOPE_ACCESS IDENTIFIER
   70                 | unary_expression SCOPE_ACCESS IDENTIFIER '(' ')'
   71                 | unary_expression SCOPE_ACCESS IDENTIFIER '(' expression ')'
   72                 | inbuilt_function_call

   73 multiplicative_expression: unary_expression
   74                          | multiplicative_expression '*' unary_expression
   75                          | multiplicative_expression '/' unary_expression
   76                          | multiplicative_expression '%' unary_expression

   77 additive_expression: multiplicative_expression
   78                    | additive_expression '+' multiplicative_expression
   79                    | additive_expression '-' multiplicative_expression

   80 relational_expression: additive_expression
   81                      | relational_expression LS_THAN additive_expression
   82                      | relational_expression GR_THAN additive_expression
   83                      | relational_expression LS_THAN_EQ additive_expression
   84                      | relational_expression GR_THAN_EQ additive_expression

   85 equality_expression: relational_expression
   86                    | equality_expression EQ relational_expression
   87                    | equality_expression NOT_EQ relational_expression

   88 logical_not_expression: equality_expression
   89                       | LOGICAL_NOT equality_expression

   90 logical_and_expression: logical_not_expression
   91                       | logical_and_expression LOGICAL_AND logical_not_expression

   92 logical_or_expression: logical_and_expression
   93                      | logical_or_expression LOGICAL_OR logical_and_expression

   94 conditional_expression: logical_or_expression
   95                       | logical_or_expression '?' expression ':' conditional_expression

   96 assignment_expression: conditional_expression
   97                      | unary_expression assignment_operator assignment_expression

   98 assignment_operator: ASSIGN
   99                    | MUL_ASSIGN
  100                    | DIV_ASSIGN
  101                    | MOD_ASSIGN
  102                    | ADD_ASSIGN
  103                    | SUB_ASSIGN

  104 expression: assignment_expression
  105           | expression ',' assignment_expression

  106 constant_expression: conditional_expression

  107 statement: labeled_statement
  108          | compound_statement
  109          | expression_statement
  110          | selection_statement
  111          | iteration_statement
  112          | jump_statement
  113          | variable_declaration_list
  114          | object_declaration

  115 compound_statement: '{' '}'
  116                   | '{' statement_list '}'

  117 statement_list: statement
  118               | statement_list statement

  119 expression_statement: ';'
  120                     | expression ';'

  121 selection_statement: IF '(' expression ')' statement
  122                    | IF '(' expression ')' statement ELSE statement
  123                    | SWITCH '(' expression ')' statement

  124 labeled_statement: IDENTIFIER ':' statement
  125                  | CASE constant_expression ':' statement
  126                  | DEFAULT ':' statement

  127 iteration_statement: WHILE '(' expression ')' statement
  128                    | FOR '(' expression_statement expression_statement ')' statement
  129                    | FOR '(' expression_statement expression_statement expression ')' statement
  130                    | FOR '(' variable_declaration expression_statement ')' statement
  131                    | FOR '(' variable_declaration expression_statement expression ')' statement

  132 jump_statement: CONTINUE ';'
  133               | BREAK ';'
  134               | SEND expression_statement

  135 inbuilt_function_call: inbuilt_function '(' ')'
  136                      | inbuilt_function '(' expression ')'
  137                      | inbuilt_member_function '(' ')'
  138                      | inbuilt_member_function '(' expression ')'

  139 inbuilt_function: CLEAR
  140                 | DRAW
  141                 | PRINT
  142                 | FLOOR
  143                 | CEIL
  144                 | TO_FLOAT
  145                 | ADD_POINT
  146                 | MAKE_POINT
  147                 | GET_COLOUR_FROM_RGB

  148 inbuilt_member_function: inbuilt_get_function
  149                        | inbuilt_set_function

  150 inbuilt_get_function: GET_X
  151                     | GET_Y
  152                     | GET_POINTS
  153                     | GET_WIDTH
  154                     | GET_CENTER
  155                     | GET_SIDES
  156                     | GET_SIDE_LENGTH
  157                     | GET_ROTATION
  158                     | GET_RADIUS
  159                     | GET_COLOUR
  160                     | GET_BORDER_COLOUR

  161 inbuilt_set_function: SET_X
  162                     | SET_Y
  163                     | SET_POINTS
  164                     | SET_WIDTH
  165                     | SET_LENGTH
  166                     | SET_CENTER
  167                     | SET_SIDES
  168                     | SET_SIDE_LENGTH
  169                     | SET_ROTATION
  170                     | SET_RADIUS
  171                     | SET_COLOUR
  172                     | SET_BORDER_COLOUR
  173                     | SET_DIMENSION


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 76
    '(' (40) 9 37 38 57 58 60 61 64 67 68 70 71 121 122 123 127 128 129 130 131 135 136 137 138
    ')' (41) 9 37 38 57 58 60 61 64 67 68 70 71 121 122 123 127 128 129 130 131 135 136 137 138
    '*' (42) 74
    '+' (43) 78
    ',' (44) 33 40 105
    '-' (45) 79
    '/' (47) 75
    ':' (58) 95 124 125 126
    ';' (59) 28 29 43 44 45 119 120 132 133
    '?' (63) 95
    '[' (91) 66
    ']' (93) 66
    '{' (123) 48 49 115 116
    '}' (125) 48 49 115 116
    error (256)
    IDENTIFIER (258) 34 36 37 38 41 42 43 44 45 57 58 59 60 61 62 69 70 71 124
    INTEGER_LITERAL (259) 23
    FLOAT_LITERAL (260) 24
    STRING_LITERAL (261) 25
    BOOL_LITERAL (262) 26
    PI (263) 27
    INT (264) 10
    FLOAT (265) 11
    STRING (266) 12
    BOOL (267) 13
    VOID (268) 14
    CONST (269) 29 42
    VAR (270) 28 41 59 60 61
    ASSIGN (271) 36 98
    MUL_ASSIGN (272) 99
    DIV_ASSIGN (273) 100
    MOD_ASSIGN (274) 101
    ADD_ASSIGN (275) 102
    SUB_ASSIGN (276) 103
    EQ (277) 86
    NOT_EQ (278) 87
    LS_THAN (279) 81
    LS_THAN_EQ (280) 83
    GR_THAN (281) 82
    GR_THAN_EQ (282) 84
    LOGICAL_AND (283) 91
    LOGICAL_OR (284) 93
    LOGICAL_NOT (285) 89
    IF (286) 121 122
    ELSE (287) 122
    FOR (288) 128 129 130 131
    WHILE (289) 127
    SWITCH (290) 123
    CASE (291) 125
    DEFAULT (292) 126
    BREAK (293) 133
    CONTINUE (294) 132
    SEND (295) 134
    FAMILY (296) 43 44 45
    ME (297)
    INHERITS (298) 44 45
    SCOPE_ACCESS (299) 69 70 71
    PUBLIC (300) 46
    PRIVATE (301) 47
    POINT (302) 15
    IMAGE (303) 16
    RECTANGLE (304) 17
    CIRCLE (305) 18
    ELLIPSE (306) 19
    POLYGON (307) 20
    CURVE (308) 21
    PATH (309) 22
    POINT_X (310)
    POINT_Y (311)
    IMG_DIMS (312)
    IMG_DRAWS (313)
    FUNC (314)
    CLEAR (315) 139
    DRAW (316) 140
    PRINT (317) 141
    FLOOR (318) 142
    CEIL (319) 143
    TO_FLOAT (320) 144
    ADD_POINT (321) 145
    MAKE_POINT (322) 146
    GET_X (323) 150
    GET_Y (324) 151
    GET_POINTS (325) 152
    GET_WIDTH (326) 153
    GET_CENTER (327) 154
    GET_SIDES (328) 155
    GET_SIDE_LENGTH (329) 156
    GET_ROTATION (330) 157
    GET_RADIUS (331) 158
    GET_COLOUR (332) 159
    GET_BORDER_COLOUR (333) 160
    SET_X (334) 161
    SET_Y (335) 162
    SET_POINTS (336) 163
    SET_WIDTH (337) 164
    SET_LENGTH (338) 165
    SET_CENTER (339) 166
    SET_SIDES (340) 167
    SET_SIDE_LENGTH (341) 168
    SET_ROTATION (342) 169
    SET_RADIUS (343) 170
    SET_COLOUR (344) 171
    SET_BORDER_COLOUR (345) 172
    SET_DIMENSION (346) 173
    COLOUR (347)
    RED (348)
    BLUE (349)
    GREEN (350)
    GET_COLOUR_FROM_RGB (351) 147
    DRIVER (352) 9


Nonterminals, with rules where they appear

    $accept (113)
        on left: 0
    program (114)
        on left: 1 2
        on right: 0
    translation_unit (115)
        on left: 3 4
        on right: 2 4
    external_declaration (116)
        on left: 5 6 7 8
        on right: 3 4
    driver_definition (117)
        on left: 9
        on right: 5
    type (118)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 28 29 37 38 41 42
    literal (119)
        on left: 23 24 25 26 27
        on right: 63
    variable_declaration (120)
        on left: 28 29
        on right: 7 30 31 54 130 131
    variable_declaration_list (121)
        on left: 30 31
        on right: 31 113
    variable_list (122)
        on left: 32 33
        on right: 28 29 33
    variable (123)
        on left: 34 35
        on right: 32 33
    variable_initialization (124)
        on left: 36
        on right: 35
    function_definition (125)
        on left: 37 38
        on right: 6 55
    args_list (126)
        on left: 39 40
        on right: 37 40 58
    arg (127)
        on left: 41 42
        on right: 39 40
    class_declaration (128)
        on left: 43 44 45
        on right: 8
    access_specifier (129)
        on left: 46 47
        on right: 45 50 52
    class_definition (130)
        on left: 48 49
        on right: 43 44 45
    class_members (131)
        on left: 50 51 52 53
        on right: 49 50 51
    class_member (132)
        on left: 54 55 56
        on right: 50 51 52 53
    constructor_declaration (133)
        on left: 57 58
        on right: 56
    object_declaration (134)
        on left: 59 60 61
        on right: 114
    primary_expression (135)
        on left: 62 63 64
        on right: 65
    unary_expression (136)
        on left: 65 66 67 68 69 70 71 72
        on right: 66 67 68 69 70 71 73 74 75 76 97
    multiplicative_expression (137)
        on left: 73 74 75 76
        on right: 74 75 76 77 78 79
    additive_expression (138)
        on left: 77 78 79
        on right: 78 79 80 81 82 83 84
    relational_expression (139)
        on left: 80 81 82 83 84
        on right: 81 82 83 84 85 86 87
    equality_expression (140)
        on left: 85 86 87
        on right: 86 87 88 89
    logical_not_expression (141)
        on left: 88 89
        on right: 90 91
    logical_and_expression (142)
        on left: 90 91
        on right: 91 92 93
    logical_or_expression (143)
        on left: 92 93
        on right: 93 94 95
    conditional_expression (144)
        on left: 94 95
        on right: 95 96 106
    assignment_expression (145)
        on left: 96 97
        on right: 97 104 105
    assignment_operator (146)
        on left: 98 99 100 101 102 103
        on right: 97
    expression (147)
        on left: 104 105
        on right: 36 61 64 66 68 71 95 105 120 121 122 123 127 129 131 136 138
    constant_expression (148)
        on left: 106
        on right: 125
    statement (149)
        on left: 107 108 109 110 111 112 113 114
        on right: 117 118 121 122 123 124 125 126 127 128 129 130 131
    compound_statement (150)
        on left: 115 116
        on right: 9 37 38 57 58 108
    statement_list (151)
        on left: 117 118
        on right: 116 118
    expression_statement (152)
        on left: 119 120
        on right: 109 128 129 130 131 134
    selection_statement (153)
        on left: 121 122 123
        on right: 110
    labeled_statement (154)
        on left: 124 125 126
        on right: 107
    iteration_statement (155)
        on left: 127 128 129 130 131
        on right: 111
    jump_statement (156)
        on left: 132 133 134
        on right: 112
    inbuilt_function_call (157)
        on left: 135 136 137 138
        on right: 72
    inbuilt_function (158)
        on left: 139 140 141 142 143 144 145 146 147
        on right: 135 136
    inbuilt_member_function (159)
        on left: 148 149
        on right: 137 138
    inbuilt_get_function (160)
        on left: 150 151 152 153 154 155 156 157 158 159 160
        on right: 148
    inbuilt_set_function (161)
        on left: 161 162 163 164 165 166 167 168 169 170 171 172 173
        on right: 149


State 0

    0 $accept: . program $end

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    CONST      shift, and go to state 6
    VAR        shift, and go to state 7
    FAMILY     shift, and go to state 8
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16
    DRIVER     shift, and go to state 17

    $default  reduce using rule 1 (program)

    program               go to state 18
    translation_unit      go to state 19
    external_declaration  go to state 20
    driver_definition     go to state 21
    type                  go to state 22
    variable_declaration  go to state 23
    function_definition   go to state 24
    class_declaration     go to state 25


State 1

   10 type: INT .

    $default  reduce using rule 10 (type)


State 2

   11 type: FLOAT .

    $default  reduce using rule 11 (type)


State 3

   12 type: STRING .

    $default  reduce using rule 12 (type)


State 4

   13 type: BOOL .

    $default  reduce using rule 13 (type)


State 5

   14 type: VOID .

    $default  reduce using rule 14 (type)


State 6

   29 variable_declaration: CONST . type variable_list ';'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16

    type  go to state 26


State 7

   28 variable_declaration: VAR . type variable_list ';'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16

    type  go to state 27


State 8

   43 class_declaration: FAMILY . IDENTIFIER class_definition ';'
   44                  | FAMILY . IDENTIFIER INHERITS IDENTIFIER class_definition ';'
   45                  | FAMILY . IDENTIFIER INHERITS access_specifier class_definition ';'

    IDENTIFIER  shift, and go to state 28


State 9

   15 type: POINT .

    $default  reduce using rule 15 (type)


State 10

   16 type: IMAGE .

    $default  reduce using rule 16 (type)


State 11

   17 type: RECTANGLE .

    $default  reduce using rule 17 (type)


State 12

   18 type: CIRCLE .

    $default  reduce using rule 18 (type)


State 13

   19 type: ELLIPSE .

    $default  reduce using rule 19 (type)


State 14

   20 type: POLYGON .

    $default  reduce using rule 20 (type)


State 15

   21 type: CURVE .

    $default  reduce using rule 21 (type)


State 16

   22 type: PATH .

    $default  reduce using rule 22 (type)


State 17

    9 driver_definition: DRIVER . '(' ')' compound_statement

    '('  shift, and go to state 29


State 18

    0 $accept: program . $end

    $end  shift, and go to state 30


State 19

    2 program: translation_unit .
    4 translation_unit: translation_unit . external_declaration

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    CONST      shift, and go to state 6
    VAR        shift, and go to state 7
    FAMILY     shift, and go to state 8
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16
    DRIVER     shift, and go to state 17

    $default  reduce using rule 2 (program)

    external_declaration  go to state 31
    driver_definition     go to state 21
    type                  go to state 22
    variable_declaration  go to state 23
    function_definition   go to state 24
    class_declaration     go to state 25


State 20

    3 translation_unit: external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 21

    5 external_declaration: driver_definition .

    $default  reduce using rule 5 (external_declaration)


State 22

   37 function_definition: type . IDENTIFIER '(' args_list ')' compound_statement
   38                    | type . IDENTIFIER '(' ')' compound_statement

    IDENTIFIER  shift, and go to state 32


State 23

    7 external_declaration: variable_declaration .

    $default  reduce using rule 7 (external_declaration)


State 24

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


State 25

    8 external_declaration: class_declaration .

    $default  reduce using rule 8 (external_declaration)


State 26

   29 variable_declaration: CONST type . variable_list ';'

    IDENTIFIER  shift, and go to state 33

    variable_list            go to state 34
    variable                 go to state 35
    variable_initialization  go to state 36


State 27

   28 variable_declaration: VAR type . variable_list ';'

    IDENTIFIER  shift, and go to state 33

    variable_list            go to state 37
    variable                 go to state 35
    variable_initialization  go to state 36


State 28

   43 class_declaration: FAMILY IDENTIFIER . class_definition ';'
   44                  | FAMILY IDENTIFIER . INHERITS IDENTIFIER class_definition ';'
   45                  | FAMILY IDENTIFIER . INHERITS access_specifier class_definition ';'

    INHERITS  shift, and go to state 38
    '{'       shift, and go to state 39

    class_definition  go to state 40


State 29

    9 driver_definition: DRIVER '(' . ')' compound_statement

    ')'  shift, and go to state 41


State 30

    0 $accept: program $end .

    $default  accept


State 31

    4 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 4 (translation_unit)


State 32

   37 function_definition: type IDENTIFIER . '(' args_list ')' compound_statement
   38                    | type IDENTIFIER . '(' ')' compound_statement

    '('  shift, and go to state 42


State 33

   34 variable: IDENTIFIER .
   36 variable_initialization: IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 43

    $default  reduce using rule 34 (variable)


State 34

   29 variable_declaration: CONST type variable_list . ';'
   33 variable_list: variable_list . ',' variable

    ';'  shift, and go to state 44
    ','  shift, and go to state 45


State 35

   32 variable_list: variable .

    $default  reduce using rule 32 (variable_list)


State 36

   35 variable: variable_initialization .

    $default  reduce using rule 35 (variable)


State 37

   28 variable_declaration: VAR type variable_list . ';'
   33 variable_list: variable_list . ',' variable

    ';'  shift, and go to state 46
    ','  shift, and go to state 45


State 38

   44 class_declaration: FAMILY IDENTIFIER INHERITS . IDENTIFIER class_definition ';'
   45                  | FAMILY IDENTIFIER INHERITS . access_specifier class_definition ';'

    IDENTIFIER  shift, and go to state 47
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49

    access_specifier  go to state 50


State 39

   48 class_definition: '{' . '}'
   49                 | '{' . class_members '}'

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16
    '}'         shift, and go to state 52

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    access_specifier         go to state 55
    class_members            go to state 56
    class_member             go to state 57
    constructor_declaration  go to state 58


State 40

   43 class_declaration: FAMILY IDENTIFIER class_definition . ';'

    ';'  shift, and go to state 59


State 41

    9 driver_definition: DRIVER '(' ')' . compound_statement

    '{'  shift, and go to state 60

    compound_statement  go to state 61


State 42

   37 function_definition: type IDENTIFIER '(' . args_list ')' compound_statement
   38                    | type IDENTIFIER '(' . ')' compound_statement

    CONST  shift, and go to state 62
    VAR    shift, and go to state 63
    ')'    shift, and go to state 64

    args_list  go to state 65
    arg        go to state 66


State 43

   36 variable_initialization: IDENTIFIER ASSIGN . expression

    IDENTIFIER           shift, and go to state 67
    INTEGER_LITERAL      shift, and go to state 68
    FLOAT_LITERAL        shift, and go to state 69
    STRING_LITERAL       shift, and go to state 70
    BOOL_LITERAL         shift, and go to state 71
    PI                   shift, and go to state 72
    LOGICAL_NOT          shift, and go to state 73
    CLEAR                shift, and go to state 74
    DRAW                 shift, and go to state 75
    PRINT                shift, and go to state 76
    FLOOR                shift, and go to state 77
    CEIL                 shift, and go to state 78
    TO_FLOAT             shift, and go to state 79
    ADD_POINT            shift, and go to state 80
    MAKE_POINT           shift, and go to state 81
    GET_X                shift, and go to state 82
    GET_Y                shift, and go to state 83
    GET_POINTS           shift, and go to state 84
    GET_WIDTH            shift, and go to state 85
    GET_CENTER           shift, and go to state 86
    GET_SIDES            shift, and go to state 87
    GET_SIDE_LENGTH      shift, and go to state 88
    GET_ROTATION         shift, and go to state 89
    GET_RADIUS           shift, and go to state 90
    GET_COLOUR           shift, and go to state 91
    GET_BORDER_COLOUR    shift, and go to state 92
    SET_X                shift, and go to state 93
    SET_Y                shift, and go to state 94
    SET_POINTS           shift, and go to state 95
    SET_WIDTH            shift, and go to state 96
    SET_LENGTH           shift, and go to state 97
    SET_CENTER           shift, and go to state 98
    SET_SIDES            shift, and go to state 99
    SET_SIDE_LENGTH      shift, and go to state 100
    SET_ROTATION         shift, and go to state 101
    SET_RADIUS           shift, and go to state 102
    SET_COLOUR           shift, and go to state 103
    SET_BORDER_COLOUR    shift, and go to state 104
    SET_DIMENSION        shift, and go to state 105
    GET_COLOUR_FROM_RGB  shift, and go to state 106
    '('                  shift, and go to state 107

    literal                    go to state 108
    primary_expression         go to state 109
    unary_expression           go to state 110
    multiplicative_expression  go to state 111
    additive_expression        go to state 112
    relational_expression      go to state 113
    equality_expression        go to state 114
    logical_not_expression     go to state 115
    logical_and_expression     go to state 116
    logical_or_expression      go to state 117
    conditional_expression     go to state 118
    assignment_expression      go to state 119
    expression                 go to state 120
    inbuilt_function_call      go to state 121
    inbuilt_function           go to state 122
    inbuilt_member_function    go to state 123
    inbuilt_get_function       go to state 124
    inbuilt_set_function       go to state 125


State 44

   29 variable_declaration: CONST type variable_list ';' .

    $default  reduce using rule 29 (variable_declaration)


State 45

   33 variable_list: variable_list ',' . variable

    IDENTIFIER  shift, and go to state 33

    variable                 go to state 126
    variable_initialization  go to state 36


State 46

   28 variable_declaration: VAR type variable_list ';' .

    $default  reduce using rule 28 (variable_declaration)


State 47

   44 class_declaration: FAMILY IDENTIFIER INHERITS IDENTIFIER . class_definition ';'

    '{'  shift, and go to state 39

    class_definition  go to state 127


State 48

   46 access_specifier: PUBLIC .

    $default  reduce using rule 46 (access_specifier)


State 49

   47 access_specifier: PRIVATE .

    $default  reduce using rule 47 (access_specifier)


State 50

   45 class_declaration: FAMILY IDENTIFIER INHERITS access_specifier . class_definition ';'

    '{'  shift, and go to state 39

    class_definition  go to state 128


State 51

   57 constructor_declaration: IDENTIFIER . '(' ')' compound_statement
   58                        | IDENTIFIER . '(' args_list ')' compound_statement

    '('  shift, and go to state 129


State 52

   48 class_definition: '{' '}' .

    $default  reduce using rule 48 (class_definition)


State 53

   54 class_member: variable_declaration .

    $default  reduce using rule 54 (class_member)


State 54

   55 class_member: function_definition .

    $default  reduce using rule 55 (class_member)


State 55

   52 class_members: access_specifier . class_member

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    class_member             go to state 130
    constructor_declaration  go to state 58


State 56

   49 class_definition: '{' class_members . '}'
   50 class_members: class_members . access_specifier class_member
   51              | class_members . class_member

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16
    '}'         shift, and go to state 131

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    access_specifier         go to state 132
    class_member             go to state 133
    constructor_declaration  go to state 58


State 57

   53 class_members: class_member .

    $default  reduce using rule 53 (class_members)


State 58

   56 class_member: constructor_declaration .

    $default  reduce using rule 56 (class_member)


State 59

   43 class_declaration: FAMILY IDENTIFIER class_definition ';' .

    $default  reduce using rule 43 (class_declaration)


State 60

  115 compound_statement: '{' . '}'
  116                   | '{' . statement_list '}'

    IDENTIFIER           shift, and go to state 134
    INTEGER_LITERAL      shift, and go to state 68
    FLOAT_LITERAL        shift, and go to state 69
    STRING_LITERAL       shift, and go to state 70
    BOOL_LITERAL         shift, and go to state 71
    PI                   shift, and go to state 72
    CONST                shift, and go to state 6
    VAR                  shift, and go to state 135
    LOGICAL_NOT          shift, and go to state 73
    IF                   shift, and go to state 136
    FOR                  shift, and go to state 137
    WHILE                shift, and go to state 138
    SWITCH               shift, and go to state 139
    CASE                 shift, and go to state 140
    DEFAULT              shift, and go to state 141
    BREAK                shift, and go to state 142
    CONTINUE             shift, and go to state 143
    SEND                 shift, and go to state 144
    CLEAR                shift, and go to state 74
    DRAW                 shift, and go to state 75
    PRINT                shift, and go to state 76
    FLOOR                shift, and go to state 77
    CEIL                 shift, and go to state 78
    TO_FLOAT             shift, and go to state 79
    ADD_POINT            shift, and go to state 80
    MAKE_POINT           shift, and go to state 81
    GET_X                shift, and go to state 82
    GET_Y                shift, and go to state 83
    GET_POINTS           shift, and go to state 84
    GET_WIDTH            shift, and go to state 85
    GET_CENTER           shift, and go to state 86
    GET_SIDES            shift, and go to state 87
    GET_SIDE_LENGTH      shift, and go to state 88
    GET_ROTATION         shift, and go to state 89
    GET_RADIUS           shift, and go to state 90
    GET_COLOUR           shift, and go to state 91
    GET_BORDER_COLOUR    shift, and go to state 92
    SET_X                shift, and go to state 93
    SET_Y                shift, and go to state 94
    SET_POINTS           shift, and go to state 95
    SET_WIDTH            shift, and go to state 96
    SET_LENGTH           shift, and go to state 97
    SET_CENTER           shift, and go to state 98
    SET_SIDES            shift, and go to state 99
    SET_SIDE_LENGTH      shift, and go to state 100
    SET_ROTATION         shift, and go to state 101
    SET_RADIUS           shift, and go to state 102
    SET_COLOUR           shift, and go to state 103
    SET_BORDER_COLOUR    shift, and go to state 104
    SET_DIMENSION        shift, and go to state 105
    GET_COLOUR_FROM_RGB  shift, and go to state 106
    '('                  shift, and go to state 107
    ';'                  shift, and go to state 145
    '{'                  shift, and go to state 60
    '}'                  shift, and go to state 146

    literal                    go to state 108
    variable_declaration       go to state 147
    variable_declaration_list  go to state 148
    object_declaration         go to state 149
    primary_expression         go to state 109
    unary_expression           go to state 110
    multiplicative_expression  go to state 111
    additive_expression        go to state 112
    relational_expression      go to state 113
    equality_expression        go to state 114
    logical_not_expression     go to state 115
    logical_and_expression     go to state 116
    logical_or_expression      go to state 117
    conditional_expression     go to state 118
    assignment_expression      go to state 119
    expression                 go to state 150
    statement                  go to state 151
    compound_statement         go to state 152
    statement_list             go to state 153
    expression_statement       go to state 154
    selection_statement        go to state 155
    labeled_statement          go to state 156
    iteration_statement        go to state 157
    jump_statement             go to state 158
    inbuilt_function_call      go to state 121
    inbuilt_function           go to state 122
    inbuilt_member_function    go to state 123
    inbuilt_get_function       go to state 124
    inbuilt_set_function       go to state 125


State 61

    9 driver_definition: DRIVER '(' ')' compound_statement .

    $default  reduce using rule 9 (driver_definition)


State 62

   42 arg: CONST . type IDENTIFIER
